src/test/resources/plang-strict/parse-error/016_unknown_type_conversion.plang
**#Using a typename for conversion, but that conversion function does not exist
**FirstErrorLoc:6,8
program t
  Változók:
    x: szöveg
  x := szöveg 'k'
program_vége
